; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/traceevent/extr_event-parse.c___parse_common.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/traceevent/extr_event-parse.c___parse_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tep_handle = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tep_handle*, i8*, i32*, i32*, i8*)* @__parse_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__parse_common(%struct.tep_handle* %0, i8* %1, i32* %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.tep_handle*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store %struct.tep_handle* %0, %struct.tep_handle** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %27, label %16

16:                                               ; preds = %5
  %17 = load %struct.tep_handle*, %struct.tep_handle** %7, align 8
  %18 = load i8*, i8** %11, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @get_common_info(%struct.tep_handle* %17, i8* %18, i32* %19, i32* %20)
  store i32 %21, i32* %12, align 4
  %22 = load i32, i32* %12, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %16
  %25 = load i32, i32* %12, align 4
  store i32 %25, i32* %6, align 4
  br label %37

26:                                               ; preds = %16
  br label %27

27:                                               ; preds = %26, %5
  %28 = load %struct.tep_handle*, %struct.tep_handle** %7, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = load i32, i32* %30, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr i8, i8* %29, i64 %32
  %34 = load i32*, i32** %9, align 8
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @tep_read_number(%struct.tep_handle* %28, i8* %33, i32 %35)
  store i32 %36, i32* %6, align 4
  br label %37

37:                                               ; preds = %27, %24
  %38 = load i32, i32* %6, align 4
  ret i32 %38
}

declare dso_local i32 @get_common_info(%struct.tep_handle*, i8*, i32*, i32*) #1

declare dso_local i32 @tep_read_number(%struct.tep_handle*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
